# python-chebai

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  box_arch.pptx  box_results_diagrams.ipynb  chebai_wiki.md  chebi_wiki.md  chemyk.py  collect_all.py  data.py  data_exploration.ipynb  demo_process_results.ipynb  eval.py  eval_model_basic.ipynb  graph.py  graph_k2.py  lstm.py  model.py  molecule.py  process_results_old_chebi.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  train.py  weights_2.pkl
.github/workflows/: black.yml  export_constants.py  lint.yml  pre-commit.yml  python-publish.yml  ruff-action.yml  test.yml  token_consistency.yaml  verify_constants.yml
chebai/: __init__.py  __main__.py  callbacks.py  cli.py  experiments.py  model.py  molecule.py  run.py  train.py
chebai/callbacks/: epoch_metrics.py  model_checkpoint.py  prediction_callback.py  save_config.py
chebai/custom_typehints/: __init__.py  model.py
chebai/ensemble/: __init__.py  _base.py  _consolidator.py  _constants.py  _controller.py  _utils.py  base.py  consolidator.py  controller.py  ensemble_run_script.py
chebai/loggers/: custom.py
chebai/loss/: bce_weighted.py  boost_bce.py  boxes.py  demo_focal_loss_with_logits.py  focal_loss.py  mixed.py  pretraining.py  semantic.py
chebai/models/: __init__.py  base.py  box_eval.py  chemberta.py  chemyk.py  classic_ml.py  electra.py  electra_box.py  ensemble.py  ffn.py  graph.py  graph_k2.py  graphyk.py  lnn_model.py  lstm.py  recursive.py  strontex.py
chebai/preprocessing/: build_parthood_problem.py  collate.py  collect_all.py  datasets.py  parthood_fol_processing.py  reader.py  structures.py
chebai/result/: _generate_classes_props_json.py  analyse_sem.py  base.py  classification.py  evaluate_predictions.py  generate_class_properties.py  molplot.py  prediction.py  prediction_json.py  pretraining.py  regression.py  utils.py
chebai/trainer/: CustomTrainer.py  InnerCVTrainer.py  inner_cv_trainer.py
chebai/wrappers/: _base.py  _constants.py  _gnn.py  _neural_network.py
chem/: chemyk.py  collect_all.py  data.py  experiments.py  model.py  molecule.py  run.py  train.py
chem/data/: collect_all.py  datasets.py  reader.py  structures.py
chem/models/: base.py  chemyk.py  electra.py  graph.py  graph_k2.py  graphyk.py  lstm.py  recursive.py
chem/preprocessing/: collate.py  collect_all.py  datasets.py  reader.py  structures.py
configs/: default_prediction_callback.yml
configs/box/: box_distance_based.yml  box_membership.yml
configs/data/: _dummy.yml  bace_moleculenet.yml  bbbp_moleculenet.yml  chebi100.yml  chebi100_SELFIES.yml  chebi100_deepSMILES.yml  chebi100_mixed.yml  chebi100_parthoods.yml  chebi50.yml  chebi50_mixed.yml  chebi50_partial.yml  chebiFlat100.yml  chebiRoles100.yml  chebi_augmentation.yml  clintox_moleculenet.yml  freesolv_moleculenet.yml  go250.yml  go50.yml  hiv_moleculenet.yml  lipo_moleculenet.yml  muv_moleculenet.yml  pubchem_SELFIES.yml  pubchem_deepSMILES.yml  pubchem_kmeans.yml  sider_moleculenet.yml  solubilityCuration.yml  solubilityESOL.yml  tox21_moleculenet.yml
configs/ensemble/: fullEnsembleWithWMV.yaml
configs/loss/: bce.yml  bce_try.yml  bce_unweighted.yml  bce_weighted.yml  boost_bce.yml  electra_pre_loss.yml  focal_loss.yml  focal_loss_12.yml  implication_disjoint_loss.yml  mae.yml  mse.yml  parthood_loss.yml  parthood_loss_p100k.yml  parthood_loss_p10k.yml  semantic_loss.yml  weighting_chebi100.yml
configs/metrics/: balanced-accuracy.yml  binary-f1-roc-auc.yml  binary-f1.yml  mae.yml  micro-macro-f1-roc-auc-17.yml  micro-macro-f1-roc-auc-17_test.yml  micro-macro-f1-roc-auc-2.yml  micro-macro-f1.yml  (+4 more)
extras/: adamh.py  ev_model.py  weight_loader.py
models/: base.py  graph.py  graph_k2.py  lstm.py
tests/: config_chebi_data.ini  testChebiData.py  testChebiDynamicDataSplits.py  testCustomBalancedAccuracyMetric.py  testCustomMacroF1Metric.py  testPubChemData.py  testTox21MolNetData.py
tutorials/: data_exploration.ipynb  data_exploration_chebi.ipynb  data_exploration_go.ipynb  data_exploration_scope.ipynb  demo_process_results.ipynb  eval_model_basic.ipynb  process_results_old_chebi.ipynb
(+201 files in other folders)
