[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chebai"
version = "1.0.3"
description = "ChEBai is a deep learning library designed for the integration of deep learning methods with chemical ontologies, particularly ChEBI."
authors = [
    { name = "MGlauer", email = "martin.glauer@ovgu.de" }
]
maintainers = [
    { name = "sfluegel05", email = "simon.fluegel@uni-osnabrueck.de"}
]
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.9,<3.13"

dependencies = [
    "numpy",
    "pandas",
    "torch",
    "transformers",
    "pysmiles==1.1.2",
    "rdkit",
    "lightning>=2.5",
]

[project.optional-dependencies]
linter = ["black", "isort", "pre-commit"]
plot = ["matplotlib", "seaborn"]
wandb = ["wandb"]

dev = [
    "networkx",
    "numpy",
    "pandas",
    "requests",
    "scikit-learn",
    "scipy",
    "torch",
    "transformers",
    "fastobo",
    "pysmiles==1.1.2",
    "rdkit",
    "selfies",
    "lightning>=2.5",
    "jsonargparse[signatures]>=4.17",
    "omegaconf",
    "deepsmiles",
    "iterative-stratification",
    "torchmetrics"
]


[tool.setuptools]
include-package-data = true
license-files = ["LICEN[CS]E*"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["**/*.txt", "**/*.json"]
