[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chebai"
version = "1.1.0"
description = "ChEBai is a deep learning library designed for the integration of deep learning methods with chemical ontologies, particularly ChEBI."
authors = [
    { name = "MGlauer", email = "martin.glauer@ovgu.de" }
]
maintainers = [
    { name = "sfluegel05", email = "simon.fluegel@uni-osnabrueck.de"}
]
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "transformers",
    "pysmiles==1.1.2",
    "rdkit==2024.3.6",
    "lightning==2.5.1",
]

[project.optional-dependencies]
plot = ["matplotlib", "seaborn"]
wandb = ["wandb"]

dev = [
    "networkx",
    "requests",
    "scikit-learn",
    "scipy",
    "fastobo",
    "selfies",
    "jsonargparse[signatures]>=4.17",
    "omegaconf",
    "deepsmiles",
    "iterative-stratification",
    "torchmetrics",
]

linters = [
    "ruff",
    "pre-commit",
]


[tool.setuptools]
include-package-data = true
license-files = ["LICEN[CS]E*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["chebai*"]

[tool.setuptools.package-data]
# Include essential config files and preprocessing tokens
"chebai" = [
    "preprocessing/bin/**/*.txt",
    "preprocessing/bin/**/*.json",
    "configs/**/*.yml",
    "configs/**/*.yaml",
]
